# open-targets

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  check_apoc_procedures.py  code_generation.py  docker-compose.yml  import.report  layout.txt  pyproject.toml  read_from_graph.py
010_screen_graph/: check_apoc_procedures.txt
020_port/: _id_type_processing.py  _transactions.py  adapter.py  script.py
adapters/: barrio_hernandez_adapter.py  target_disease_evidence_adapter.py
benchmark/: run_benchmark_bc.py  run_benchmark_otar.py
code_generation/: __init__.py  config.py  generate.py  reference_kg_kg.py  schema.py
config/: barrio_hernandez_schema_config.yaml  biocypher_config.yaml  biocypher_config_barrio.yaml  biocypher_config_disease_target.yaml  biocypher_config_extended.yaml  extended_schema_config.yaml  extended_target_disease_schema_config.yaml  schema_config.yaml  schema_config_all_node_types.yaml  target_disease_schema_config.yaml
data/: README.txt  apoc_procedures_ot_data.txt  granular_relationships.txt  granular_relationships_ordered.txt  granular_relationships_readable.txt  node_labels.csv
data/ot_files/: README.txt  apoc_procedures_ot_data_annotated.txt  apoc_procedures_ot_data_reduced.txt
docker/: create_table.sh
example/custom_subset/: custom_subset.py  schema_config.yaml
example/full_graph/: full_graph.py  schema_config.yaml
open_targets/: __init__.py  base.jinja  config.py  config.py.jinja  gen_config.py  open_targets_adapter.py  target_disease_evidence_adapter.py
open_targets/adapter/: acquisition_definition.py  context.py  context_protocol.py  data_view.py  data_wrapper.py  expression.py  generation_context.py  generation_definition.py  generator.py  licence.py  output.py  scan_operation.py  scan_operation_predicate.py  typing.py
open_targets/data/: __init__.py  _ftp_client.py  _ftp_helper.py  download.py  info.py  schema.py  schema.py.jinja  schema.txt  schema_base.py
open_targets/definition/: __init__.py  base.bk  curie_prefix.py  curie_scheme.py  edge_annotated_in.py  edge_annotation_has_tag.py  edge_annotation_mentions.py  edge_disease_biomarker.py  edge_disease_biomarker_gene_expression.py  edge_disease_biomarker_genetic_variation.py  edge_disease_has_broad_synonym.py  edge_disease_has_category.py  edge_disease_has_child.py  edge_disease_has_datasource.py  edge_disease_has_exact_synonym.py  edge_disease_has_keyword.py  edge_disease_has_narrow_synonym.py  edge_disease_has_obsolete_xref.py  edge_disease_has_related_synonym.py  edge_disease_has_synonym.py  edge_disease_has_xref.py  edge_disease_in_therapeutic_area.py  edge_disease_is_a.py  edge_disease_phenotype.py  edge_drug_disease.py  edge_drug_has_indication.py  edge_drug_has_keyword.py  edge_drug_target.py  edge_drug_targets_disease.py  edge_drug_warning_has_reference.py  edge_evidence_for_disease.py  edge_evidence_from_biological_model.py  edge_evidence_from_cell_line.py  edge_evidence_has_biological_model.py  edge_evidence_has_biomarker.py  edge_evidence_has_clinical_trial.py  edge_evidence_has_drug.py  (+173 more)
otar_biocypher/: barrio_hernandez_adapter.py  target_disease_evidence_adapter.py
port/: adapter.py  script.py  target_disease_evidence_adapter.py  target_disease_script.py
screen_graph/: 010_read_from_graph.py  020_check_apoc_procedures.py
scripts/: barrio_hernandez_script.py  download.sh  open_targets_biocypher_run.py  open_targets_kg_run.py  parquet_download.sh  target_disease_script.py  target_disease_script_extended.py
(+123 files in other folders)
