[project]
name = "open_targets"
version = "0.4.0"
description = "BioCypher Open Targets data adapter"
authors = [
    { name = "Paul Ka Po To", email = "kto@ebi.ac.uk" },
    { name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com" },
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "biocypher>=0.12.5",
    "bioregistry>=0.13.21",
    "duckdb>=1.4.4",
    "xxhash>=3.6.0",
]

[tool.open-targets]
data-version = "25.12"
metadata-url = "https://ftp.ebi.ac.uk/pub/databases/opentargets/platform/25.12/croissant.json"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "jinja2>=3.1.6",
    "tomli>=2.4.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101", "D100", "D101", "D102", "D103", "D104", "SLF001"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
# strict on main code, standard on test to allow private method access
typeCheckingMode = "standard"
strict = ["open_targets", "scripts"]
